force-app/main/default/objects/One_JN_Output__e/One_JN_Output__e.object-meta.xml
<CustomObject>
    <description>Sends information to external system</description>
    <label>One JN Output</label>
    <pluralLabel>One JN Outputs</pluralLabel>
</CustomObject>