force-app/main/default/objects/One_JN_Output__e/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>External system record id</description>
    <label>External Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>