force-app/main/default/objects/One_JN_Output__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>type of event</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>