force-app/main/default/objects/One_JN_Output__e/fields/SfRecordId__c.field-meta.xml
<CustomField>
    <fullName>SfRecordId__c</fullName>
    <description>Salesforce record id</description>
    <label>Salesforce Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>